# simple-web-app

./: Dockerfile  app.py  error.html  index.html  message.html  pyproject.toml
storage/: data.json
